<resources>
    <string name="app_name">ORCO</string>
    <string name="saludo">Hola</string>
    <string name="mensaje">En los momentos de crisis solo la imaginación es más importante que el conocimiento</string>
    <string name="derechos">2022 Todos los derechos reservados</string>
    <string name="empezar">Empezar</string>
    <string name="descripcion_logo">Logo de la empresa</string>
    <string name="empezar_mensaje">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis cursus lacus at mattis. Curabitur laoreet consectetur mollis. Vivamus fringilla, turpis sit amet bibendum vehicula, nibh felis malesuada massa, ac aliquam mauris leo ut eros.</string>
    <string name="login">Iniciar sesión</string>
    <string name="terminos">Términos</string>
    <string name="terminos_contenido">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis cursus lacus at mattis. Curabitur laoreet consectetur mollis. Vivamus fringilla, turpis sit amet bibendum vehicula, nibh felis malesuada massa, ac aliquam mauris leo ut eros. Integer id finibus tortor, id tincidunt sapien. Praesent finibus molestie elit, et dignissim felis viverra quis. Nullam ultrices diam eu augue pharetra consectetur. Suspendisse pulvinar magna semper velit ultricies, non feugiat ante tristique. Maecenas egestas interdum nisi, sed cursus lorem fermentum nec. Nulla facilisi. Maecenas nec erat congue, ornare arcu vel, suscipit magna. Suspendisse id gravida diam, a vestibulum mauris. Curabitur sed metus eu nibh blandit consequat a a augue. Aenean ultrices maximus ex tristique lobortis. Etiam ac ante diam.
\n\n
Mauris tristique auctor est non pulvinar. Phasellus pulvinar diam a tristique ullamcorper. In lacus lectus, euismod in justo at, ultrices ornare elit. Proin facilisis velit nec laoreet varius. Curabitur vel enim at sem varius semper. Aenean efficitur posuere diam ut ultrices. Aliquam sodales, est ut bibendum aliquet, erat massa dignissim nisl, in faucibus lacus ante at metus. Aliquam quis lacus lorem. Curabitur dignissim vel felis et ultricies. In ut fermentum felis, sed gravida eros. Maecenas luctus commodo dui, vitae consequat nisi consequat at. Pellentesque porta sapien nec tincidunt auctor.
\n\n
Morbi maximus elementum viverra. Curabitur porttitor nisi quis pretium egestas. Etiam et ipsum sit amet turpis euismod tincidunt. Donec ac metus ligula. Maecenas risus est, condimentum et efficitur non, vestibulum eget nulla. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam in congue elit, vel viverra mauris. Pellentesque commodo, sapien sagittis accumsan pulvinar, urna dolor fringilla odio, et pretium quam mi nec velit.
\n\n
Nunc maximus quam in tempus fringilla. Curabitur varius aliquet augue a finibus. Cras accumsan felis sed risus tristique, eu viverra quam blandit. Integer a purus vel libero tincidunt congue. Duis quis ligula dignissim, mattis urna ut, pulvinar nisi. Aenean ipsum lacus, consequat ut tristique at, mattis maximus arcu. Suspendisse sollicitudin ex vel vehicula tincidunt.
\n\n
In fermentum sed arcu in auctor. Duis vitae mauris at ligula tincidunt pharetra ut luctus purus. Nam bibendum massa at velit cursus rutrum. Etiam porttitor neque a sagittis lacinia. Proin luctus, lacus et consequat convallis, augue lorem molestie massa, sit amet pretium risus purus vitae sem. Maecenas pulvinar tempus risus vel vestibulum. Quisque congue massa a metus ornare iaculis. In facilisis nunc imperdiet dui condimentum, et rutrum massa eleifend. Vestibulum eu ligula eu nunc viverra venenatis eget eu enim. Vivamus auctor sollicitudin erat, non gravida velit rutrum at. Curabitur consequat risus ac lorem maximus, et lacinia ex rutrum. Cras et mi viverra, faucibus neque id, aliquam sapien. Donec lorem ligula, vulputate eu venenatis vel, iaculis id justo. Curabitur ut aliquam libero. Maecenas non auctor felis, nec ornare orci.
    </string>
    <string name="empezar_descripcion_imagen">Joven mujer comprando el línea con tarjeta</string>
    <string name="cerrar">Cerrar</string>
    <string name="informacion">Información</string>
    <string name="ayuda">Ayuda</string>
    <string name="proveedores">Proveedores</string>
    <string name="oficinas">Oficinas</string>
    <string name="herramientas">Herramientas</string>
    <string name="contactos">Contactos</string>
    <string name="calendario">Calendario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tokio">Tokio</string>
    <string name="barcelona">Barcelona</string>
    <string name="estocolmo">Estocolmo</string>
    <string name="title_activity_corporacion">CorporacionActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_corporation">CorporationActivity</string>
</resources>